--- a/Portfolio/wwwroot/index.html
+++ b/Portfolio/wwwroot/index.html
@@ -12,6 +12,8 @@
 
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+
+    <link href="css/site.css" rel="stylesheet"/>
 </head>
 
 <body>
